cant get into functions

--- a/web/app/view1/view1.html
+++ b/web/app/view1/view1.html
@@ -1,74 +1,84 @@
 <section id="content">
-		<div class="for_banners">
-			<article class="col1">
-						<div class="tabs">
-							<ul class="nav">
-								<li class="selected"><a href="#Flight">Flight</a></li>
-								<li><a href="#Hotel">Hotel</a></li>
-								<li class="end"><a href="#Rental">Rental</a></li>
-							</ul>
-							<div class="content">
-								<div class="tab-content" id="Flight">
-									<form id="form_1" method="post">
-										<div>
-											<div class="radio">
-												<div class="wrapper">
-													 <input type="radio" name="name1" checked>
-													 <span class="left">Standard</span>
-													 <input type="radio" name="name1">
-													 <span class="left">World Map</span>
-												</div>
-											</div>
-											<div class="row">
-												<span class="left">From</span>
-												<input type="text" class="input">
-											</div>
-											<div class="row">
-												<span class="left">To</span>
-												<input type="text" class="input">
-											</div>
-											<div class="wrapper">
-												<div class="col1">
-													<div class="row">
-														<span class="left">Outbound</span>
-														<input type="text" class="input1" value="03.05.2011"  onblur="if(this.value=='') this.value='03.05.2011'" onFocus="if(this.value =='03.05.2011' ) this.value=''">
-													</div>
-													<div class="row">
-														<span class="left">Return</span>
-														<input type="text" class="input1" value="10.05.2011"  onblur="if(this.value=='') this.value='10.05.2011'" onFocus="if(this.value =='10.05.2011' ) this.value=''">
-													</div>
-												</div>
-												<input type="text" class="input1 marg_top1" value="+/- 0 Days"  onblur="if(this.value=='') this.value='+/- 0 Days'" onFocus="if(this.value =='+/- 0 Days' ) this.value=''">
-											</div>
-											<div class="row">
-												<span class="left">Adults</span>
-												<input type="text" class="input2" value="2"  onblur="if(this.value=='') this.value='2'" onFocus="if(this.value =='2' ) this.value=''">
-											</div>
-											<div class="row">
-												<span class="left">Children</span>
-												<input type="text" class="input2" value="0"  onblur="if(this.value=='') this.value='0'" onFocus="if(this.value =='0' ) this.value=''">
-												<span class="pad_left1">(0-11 years)</span>
-											</div>
-											<div class="wrapper">
-												<span class="right relative"><a href="#" class="button1" onClick="document.getElementById('form_1').submit()"><strong>Search</strong></a></span>
-												<a href="#" class="link1">More Options</a>
-											</div>
-										</div>
-									</form>
-								</div>
-                                                            
+    <div class="for_banners">
+        <article class="col1">
+            <div class="tabs">
+                <ul class="nav">
+                    <li class="selected"><a href="#Flight">Flight</a></li>
+                    <li><a href="#Hotel">Hotel</a></li>
+                    <li class="end"><a href="#Rental">Rental</a></li>
+                </ul>
+                <div class="content">
+                    <div class="tab-content" id="Flight">
+                        <form id="form_1" method="post" >
+                            <div>
+                                <div class="radio">
+                                    <div class="wrapper">
+                                        <input type="radio" name="name1" checked>
+                                        <span class="left">Standard</span>
+                                        <input type="radio" name="name1">
+                                        <span class="left">World Map</span>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <span class="left">From</span>
+                                    <input id="searchFrom" type="text" class="input" value="Copenhagen">
+                                </div>
+                                <div class="row">
+                                    <span class="left">To</span>
+                                    <input id="searchTo" type="text" class="input" >
+                                </div>
+                                <div class="wrapper">
+                                    <div class="col1">
+                                        <div class="row">
+                                            <span class="left">Departure Date</span>
+                                            <input id="departureDate" type="text" class="input1" value="2016-04-27"  onblur="if (this.value == '')
+                                                        this.value = '2016-04-27'" onFocus="if (this.value == '2016-04-27')
+                                                                    this.value = ''">
+                                        </div>
+                                        <div class="row">
+                                            <span class="left">Return</span>
+                                            <input type="text" class="input1" value="2016-04-27"  onblur="if (this.value == '')
+                                                        this.value = '10.05.2011'" onFocus="if (this.value == '10.05.2011')
+                                                                    this.value = ''">
+                                        </div>
+                                    </div>
+                                    <input type="text" class="input1 marg_top1" value="+/- 0 Days"  onblur="if (this.value == '')
+                                                this.value = '+/- 0 Days'" onFocus="if (this.value == '+/- 0 Days')
+                                                            this.value = ''">
+                                </div>
+                                <div class="row">
+                                    <span class="left">Adults</span>
+                                    <input id="tickets" type="text" class="input2" value="2"  onblur="if (this.value == '')
+                                                this.value = '2'" onFocus="if (this.value == '2')
+                                                            this.value = ''">
+                                </div>
+                                <div class="row">
+                                    <span class="left">Children</span>
+                                    <input type="text" class="input2" value="0"  onblur="if (this.value == '')
+                                                this.value = '0'" onFocus="if (this.value == '0')
+                                                            this.value = ''">
+                                    <span class="pad_left1">(0-11 years)</span>
+                                </div>
+                                <div class="wrapper">
+                                    <span class="right relative"><a href="#" class="button1" ng-click="ctrl.search1()"><strong>Search</strong></a></span>
+                                    <a href="#" class="link1">More Options</a>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
 
-							</div>
-						</div>	
-					</article>
-					<div id="slider">
-						<img src="images/banner1.jpg" alt="">
-						<img src="images/banner2.jpg" alt="">
-						<img src="images/banner3.jpg" alt="">
-					</div>
-				</div>
 
-			</section>
+                </div>
+            </div>	
+        </article>
+        <div id="slider">
+            <img src="images/banner1.jpg" alt="">
+            <img src="images/banner2.jpg" alt="">
+            <img src="images/banner3.jpg" alt="">
+        </div>
+    </div>
+
+</section>
 
 
 <p>Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum Lorem Ipsum, Lorem Ipsum </p>
