Fixed tabs so when you click one it shows as active.

--- a/web/app/view5/view5.html
+++ b/web/app/view5/view5.html
@@ -1,5 +1,6 @@
 <section id="content">
-		<div class="wrapper pad1">
+     
+<!--		<div class="wrapper pad1">
 			<article class="col1">
 				<div class="box1">
 							<h2 class="top">Hot Offers of the Week</h2>
@@ -125,5 +126,5 @@
 							</div>
 						</div>
 					</article>
-				</div>
+				</div>-->
 			</section>
