arbejder på booking knap

--- a/web/app/view1/view1.html
+++ b/web/app/view1/view1.html
@@ -81,6 +81,8 @@
                     </ul>
 
                     <button ng-click="book(b.flightID)" >Book</button> 
+                    <p>Name <input type="text" style="float: start"> Phone<input type="text" style="float: next"> Email <input type="text" style="float: next"></p>
+                    <p>Name <input type="text" style="float: start"> Phone<input type="text" style="float: next"> Email <input type="text" style="float: next"></p>
                     <br>
                     <br>
                 </ul>
@@ -93,4 +95,6 @@
         </ul>
 
     </div>
+
+   
 </div>
