--- a/web/app/view1/view1.html
+++ b/web/app/view1/view1.html
@@ -102,6 +102,7 @@
 
 
         </div>
+        <div id="resulterrormessage" style="color:red; font-size: 18px;" ></div>
 
         <div id="bookingPage" style="background-color: grey">
 
