Kasper din llama john leder efter dig!

--- a/web/app/view4/view4.html
+++ b/web/app/view4/view4.html
@@ -101,7 +101,7 @@
                             
 
                         </ul>
-                <li><input type="button" value="Delete" ></li>
+                <li><input type="button" value="Delete" ng-click="deleteairline(f.id)" ></li>
                 <li><br>
                     <br></li>
                 
