--- a/web/app/view1/view1.html
+++ b/web/app/view1/view1.html
@@ -18,19 +18,27 @@
                                     </div>
                                     <div class="row">
                                         <span class="left">From</span>
-                                        <input id="searchFrom" type="text" class="input" value="CPH">
+                                        <input id="searchFrom" class="input" class="awesomplete" list="mylist">
+                                        <datalist id="mylist">
+                                            <option label="Copenhagen">CPH</option>
+                                            <option label="London">STN</option>
+                                            <option label="Berlin">SXF</option>
+                                            <option label="Paris">CDG</option>
+                                            <option label="Barcelona">BCN</option>
+                                        </datalist>
                                     </div>
                                     <div class="row">
                                         <span class="left">To</span>
-                                        <input id="searchTo" type="text" class="input" >
+                                        <input id="searchTo" type="text" class="input" class="awesomplete" list="mylist">
                                     </div>
                                     <div class="wrapper">
                                         <div >
                                             <div class="row">
                                                 <span class="left">Departure Date</span>
-                                                <input id="departureDate" type="text" class="input" value="2016-05-16"  onblur="if (this.value == '')
+                                                <input id="departureDate" type="text" class="input"  value="2016-05-16"  onblur="if (this.value == '')
                                                                             this.value = '2016-04-27'" onFocus="if (this.value == '2016-04-27')
                                                                                                         this.value = ''">
+                                                
                                             </div>
                                         </div>
 
@@ -38,7 +46,6 @@
                                     <div class="row">
                                         <span class="left">Number of seats</span>
                                         <input id="tickets" type="text" class="input2" value="2"  onblur="if (this.value == '')
-
                                                                     this.value = '2'" onFocus="if (this.value == '2')
                                                                                                 this.value = ''">
 
@@ -82,7 +89,7 @@
                             <li> {{x}}: {{z}} </li>    
 
                         </ul>
-                       
+
                         <button ng-click="switchPage(f.url, b.flightID)" >Choose</button> 
 
 
