register new user samt autocomplete skulle virke

--- a/web/app/view1/view1.html
+++ b/web/app/view1/view1.html
@@ -125,11 +125,10 @@
                 <br>
                 <br>
                 <br>
-                <p>NAME<input id="name" type="TEXT" size="20" maxlength="99" /></p>
-                <p>EMAIL<input id="email" type="email" size="30"  maxlength="99" /></p>
-                <p>TELEPHONE<input id="phone" type="number" ></p>
-                <input type="number" id="member" name="member" value="">Number of passengers<br>
-                <a href="" id="filldetails" onclick="addFields()">Add passenger info</a>
+                <p>NAME <input id="name" type="TEXT" size="20" maxlength="99" value="{{username}}"/></p>                
+                <p>EMAIL <input id="email" type="email" size="30"  maxlength="99"/></p>
+                <p>TELEPHONE <input id="phone" type="number" ></p><br>
+                <p>Passenger info </p>
                 <div id="passengers"></div>
 
 
