--- a/web/app/view1/view1.html
+++ b/web/app/view1/view1.html
@@ -87,7 +87,7 @@
 
                 <li><h4 style="background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%); opacity: 0.95;" >{{f.flightOffer.airline}}</h4></li>
 
-                <div style="background-color: #B6B6B4;">   
+                <div style="background-color: #9ed1ca;">   
 
                     <ul ng-repeat="b in f.flightOffer.flights| myFilter">
                         <ul ng-repeat="(x, z) in b">
