--- a/web/app/view2/view2.html
+++ b/web/app/view2/view2.html
@@ -9,7 +9,7 @@
             <h4 style="background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%); opacity: 0.95;" >FlightInfo for Flight  -  {{flight.flightID}}</h4>
         </li>
 
-        <div style="background-color: #B6B6B4;"> 
+        <div style="background-color: #9ed1ca;"> 
 
             <ul>
                 <li ng-repeat="(key, value) in flight| myFilter2"> 
