--- a/web/index.html
+++ b/web/index.html
@@ -37,7 +37,7 @@
     <script src="app/components/services.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
     
-
+<link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
     <script src="awesomplete.js" async></script>
     <link rel="stylesheet" href="awesomplete.css" />
     
