--- a/web/index.html
+++ b/web/index.html
@@ -90,7 +90,7 @@
 
                             <li class="view"  ><a href="#/view1" class="menulinks"  onclick="setactive(1)"><span><span>Search Flights</span></span></a></li>
                                 <li class="view"><a href="#/view2" class="menulinks" ng-show="isAuthenticated"  onclick="setactive(2)"><span><span>My Reservations</span></span></a></li>
-				<li class="view" ><a ng-show="isAuthenticated"  href="#/view3" class="menulinks" onclick="setactive(3)"><span><span>My User</span></span></a></li>  
+				<!--<li class="view" ><a ng-show="isAuthenticated"  href="#/view3" class="menulinks" onclick="setactive(3)"><span><span>My User</span></span></a></li>-->  
 				<li class="view" ><a href="#/view4" ng-show="isAdmin" class="menulinks" onclick="setactive(4)"><span><span>Admin</span></span></a></li>
 
 			</ul>
@@ -125,6 +125,7 @@
             <a class="forgot"  ng-click="register()" href="">Register</a>        </p>
         </div>
         <div id="Registerdiv">
+            <div id="errorid"></div>
            <p>
             <a class="forgot" id="sendregistration" ng-click="sendregistration()" href="">Register</a>        </p>   
            <p> 
