--- a/web/index.html
+++ b/web/index.html
@@ -125,7 +125,7 @@
             <a class="forgot"  ng-click="register()" href="">Register</a>        </p>
         </div>
         <div id="Registerdiv">
-            <div id="errorid"></div>
+            <div id="errorid" style="color: red;"></div>
            <p>
             <a class="forgot" id="sendregistration" ng-click="sendregistration()" href="">Register</a>        </p>   
            <p> 
